syntax = "proto3";

package book.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/0utl1er-tech/phox-customer/gen/pb/book/v1;bookv1";

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {
    option (google.api.http) = {
      get: "/v1/books/{id}"
    };
  }
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {
    option (google.api.http) = {
      get: "/v1/books"
    };
  }
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {
    option (google.api.http) = {
      post: "/v1/books"
      body: "*"
    };
  }
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse) {
    option (google.api.http) = {
      put: "/v1/books/{id}"
      body: "*"
    };
  }
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse) {
    option (google.api.http) = {
      delete: "/v1/books/{id}"
    };
  }
  rpc ImportBook(ImportBookRequest) returns (ImportBookResponse) {
    option (google.api.http) = {
      post: "/v1/books/import"
      body: "*"
    };
  }
}

message Book {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp created_at = 4;
}

message GetBookRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message GetBookResponse {
  Book book = 1;
}

message ListBooksRequest {
  string user_id = 1;
}

message ListBooksResponse {
  repeated Book books = 1;
}

message CreateBookRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string owner_id = 2;
}

message CreateBookResponse {
  Book book = 1;
}

message UpdateBookRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 32
  ];
}

message UpdateBookResponse {
  Book updated_book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {}

message ImportBookRequest {
  string file_name = 1;
  bytes file_content = 2;
  string owner_id = 3;
}

message ImportBookResponse {
  string book_id = 1;
  int32 imported_count = 2;
  int32 failed_count = 3;
  repeated ImportError errors = 4;
}

message ImportError {
  int32 line_number = 1;
  string error_message = 2;
}
